Score display styles

--- a/public/assets/sass/base/_typography.sass
+++ b/public/assets/sass/base/_typography.sass
@@ -1,5 +1,5 @@
 .contest
-  &.score-sum
+  &.contest-score-total, &.contest-player
     font-weight: bold
-  &.no-score
+  &.contest-noscore
     color: #ccc
