--- a/public/assets/css/screen.css
+++ b/public/assets/css/screen.css
@@ -1,7 +1,7 @@
 body {
   padding-top: 60px; }
 
-.contest.score-sum {
+.contest.contest-score-total, .contest.contest-player {
   font-weight: bold; }
-.contest.no-score {
+.contest.contest-noscore {
   color: #cccccc; }
