Require individual Bootstrap files
Or they'll end up in the wrong order

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,7 @@
  * gets included (e.g. say you have require_tree . then the code will appear after all the directories 
  * but before any files alphabetically greater than 'application.css' 
  *
- *= require_directory bootstrap-3.0.2
+ *= require bootstrap-3.0.2/bootstrap.css
+ *= require bootstrap-3.0.2/bootstrap-theme.css
  *= require screen
  */
